<resources>
    <string name="app_name">TPAndroid</string>
    <string name="textFragmentView">Testing Fragment View</string>
    <string name="gyro_text_value">My gyro Value</string>
    <string name="Acc_text_value">My Accelerometer value</string>
    <string name="Magnetometer_text_value">Magnetometer value</string>
    <string name="rotation_text_value">Rotation Value</string>
    <string name="text_entry">Type your text</string>
    <string name="button_font">Change To Bold</string>
    <string name="button_color">Change to Blue</string>
</resources>