<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="224dp">

        <TextView
            android:id="@+id/textViewGyroVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyro_text_value" />

        <TextView
            android:id="@+id/textViewAccVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Acc_text_value" />

        <TextView
            android:id="@+id/textViewMgnVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Magnetometer_text_value" />

        <TextView
            android:id="@+id/textViewRotVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotation_text_value" />


        <com.example.tpandroid.MotionView
            android:id="@+id/motionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>